--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.2",
     "@tailwindcss/forms": "^0.4.0",
     "next": "^12.0.10",
     "react": "^18.0.0-rc.0",
-    "react-dom": "^18.0.0-rc.0"
+    "react-dom": "^18.0.0-rc.0",
+    "react-hook-form": "^7.27.1"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
@@ -20,6 +22,7 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
+    "prisma": "^3.10.0",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
