--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://127.0.0.1:3306/mynextapp"
+TWILIO_SID=ACad666c1478ecb051e1984f12f2844140
+TWILIO_TOKEN=29fd06826296444d9dcd7c22e2b20f6f
+TWILIO_MSID=MG772d5b68e4b80262266c690dc6cdd9e9
+PHONE_NUMBER=8201029732959
+SENDGRID_API_KEY=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
