--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ TWILIO_TOKEN=29fd06826296444d9dcd7c22e2b20f6f
 TWILIO_MSID=MG772d5b68e4b80262266c690dc6cdd9e9
 PHONE_NUMBER=8201029732959
 SENDGRID_API_KEY=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
+COOKIE_PASSWORD=Wn-23CRBJk+R!7kN^rU\*cbE9AeFKeg65k533rwz
