--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^3.9.2",
+    "@prisma/client": "^3.11.0",
     "@sendgrid/mail": "^7.6.2",
     "@tailwindcss/forms": "^0.4.0",
     "iron-session": "^6.0.5",
@@ -16,6 +16,7 @@
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
     "react-hook-form": "^7.27.1",
+    "swr": "^1.2.2",
     "twilio": "^3.75.1"
   },
   "devDependencies": {
