--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ TWILIO_MSID=MG772d5b68e4b80262266c690dc6cdd9e9
 PHONE_NUMBER=8201029732959
 SENDGRID_API_KEY=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
 COOKIE_PASSWORD=Wn-23CRBJk+R!7kN^rU\*cbE9AeFKeg65k533rwz
+CF_TOKEN=Q1Iz1LNNcG9YfoxmdKNLPu7sjgv7yhT-cag4EVEy
+CF_ID=71913d5a2869af1e01cda98cd929d7f9
+CLOUDFLARE_STREAM_API_TOKEN=acJv95kVvPHoTH8j9kyTXDngcrqryl0H5sRq_qsf
